# GlimmerEngine

./: CMakeLists.txt  README.md
apps/: main.cpp
dependences/include/assimp/: revision.h
dependences/lib/assimp/: assimp-vc143-mt.lib
resource/cubetextures/sunset/: sunset_negX.dds  sunset_negY.dds  sunset_negZ.dds  sunset_posX.dds  sunset_posY.dds  sunset_posZ.dds
resource/materials/: Cerberus.mat
shaders/: base_vertex.hlsl  commondata.hlsli  commontypes.hlsli  default.hlsl  default_pixel.hlsl  equirectangular_pixel.hlsl  equirectangular_vertex.hlsl  geometry_pixel.hlsl  geometry_vertex.hlsl  mipmapcs.hlsl  mipmapcs.hlsli  mipmapcs_xodd.hlsl  mipmapcs_xyeven.hlsl  mipmapcs_xyodd.hlsl  mipmapcs_yodd.hlsl  pbr_pixel.hlsl  pbr_vertex.hlsl  pbrmathematics.hlsli  skybox_pixel.hlsl  skybox_vertex.hlsl
src/: main.cpp
src/core/: application.cpp  application.h  clientgame.cpp  clientgame.h  commandallocatorpool.cpp  commandallocatorpool.h  commandmanager.cpp  commandmanager.h  commandqueue.cpp  commandqueue.h  context.cpp  context.h  descriptorheapallocator.cpp  descriptorheapallocator.h  descriptortypes.h  dynamicdescriptorheap.cpp  dynamicdescriptorheap.h  events.h  game.cpp  game.h  graphicscore.cpp  graphicscore.h  headers.h  pso.cpp  pso.h  rootsignature.cpp  rootsignature.h  staticdecriptorheap.cpp  staticdecriptorheap.h  texturemanager.cpp  texturemanager.h  timer.h  window.cpp  window.h
src/core/components/: camera.cpp  camera.h  controller.cpp  controller.h  hdrtocubemap.cpp  hdrtocubemap.h  mipmapgenerator.cpp  mipmapgenerator.h  scene.cpp  scene.h  skybox.cpp  skybox.h
src/core/geometry/: defaultgeometry.cpp  defaultgeometry.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  objloader.cpp  objloader.h  vertexformat.cpp  vertexformat.h
src/core/mathematics/: bitoperation.h
src/core/renderelement/: renderitem.cpp  renderitem.h
src/core/resources/: DDSTextureLoader.cpp  byteaddressbuffer.cpp  byteaddressbuffer.h  colorbuffer.cpp  colorbuffer.h  depthbuffer.cpp  depthbuffer.h  gpubuffer.cpp  gpubuffer.h  gpuresource.h  pixelbuffer.cpp  pixelbuffer.h  readbackbuffer.cpp  readbackbuffer.h  samplerdesc.cpp  samplerdesc.h  texture.cpp  texture.h  uploadbuffer.cpp  uploadbuffer.h
src/core/resources/memoryallocator/: linearallocator.cpp  linearallocator.h
src/core/types/: color.h  commontypes.h  uuid.h
